--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
